--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,120 @@
 .App {
-  text-align: center;
+    width: 99vw;
+    height: 99vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+/*Navbar...*/
+
+.btn-position {
+    margin-left: 10%;
+    width: 80%;
+    margin-left: none;
+    height: 10%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.grp-name {
+    margin-top: 20px;
+    font-style: Cursive;
+    font-weight: 500;
+    font-size: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+/*styling  of the all avilable button....*/
+
+.btn {
+    height: 60%;
+    margin-top: 1.1%;
+    width: 12%;
+    border: 2px solid grey;
+    border-radius: 8px;
+    background: rgba(142, 222, 167, 0.2);
 }
 
-.App-link {
-  color: #61dafb;
+
+/*styling of the hover button container.*/
+
+#button-container {
+    width: 23%;
+    height: 15%;
+    margin-left: 39.5%;
+    margin-top: 23%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hover-btn {
+    height: 100%;
+    width: 100%;
+    font-size: 2.5rem;
+    color: blue;
+}
+
+
+/*styling for the top position hover...*/
+
+.top {
+    height: 30%;
+    width: 50%;
+    margin-top: -50%;
+    margin-left: 20%;
+    padding: 6px 10px 15px 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 1rem;
+    background-color: rgba(199, 23, 79, 0.786);
+}
+
+
+/*styling for the right position hover...*/
+
+.right {
+    height: 30%;
+    width: 50%;
+    margin-top: -22%;
+    margin-left: 105%;
+    padding: 6px 10px 15px 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 1rem;
+    background-color: rgba(17, 80, 197, 0.579);
+}
+
+
+/*styling for the down position hover...*/
+
+.down {
+    height: 30%;
+    width: 50%;
+    margin-top: 5%;
+    margin-left: 20%;
+    padding: 6px 10px 15px 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 1rem;
+    background-color: rgba(14, 225, 95, 0.784);
+}
+
+
+/*styling for the left position hover...*/
+
+.left {
+    height: 30%;
+    width: 50%;
+    margin-top: -22%;
+    margin-left: -60%;
+    padding: 6px 10px 15px 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: 1rem;
+    background-color: rgba(227, 23, 23, 0.946);
+}
+
+
+/*styling for the active  button ...*/
+
+.active {
+    background-color: rgba(76, 10, 175, 0.3);
 }
